--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -418,42 +418,44 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-striped table-hover">
+                                <table class="table table-striped table-hover align-middle">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
                                             <th>用戶名</th>
                                             <th>餘額</th>
-                                            <th>所屬代理</th>
-                                            <th>創建時間</th>
-                                            <th>最後登入</th>
                                             <th>狀態</th>
+                                            <th>創建時間</th>
                                             <th>操作</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <tr v-if="members.length === 0">
+                                            <td colspan="6" class="text-center">無會員數據</td>
+                                        </tr>
                                         <tr v-for="member in members" :key="member.id">
                                             <td>{{ member.id }}</td>
                                             <td>{{ member.username }}</td>
                                             <td>{{ formatMoney(member.balance) }}</td>
-                                            <td>{{ member.agentId }}</td>
-                                            <td>{{ formatDate(member.createdAt) }}</td>
-                                            <td>{{ member.lastLoginAt ? formatDate(member.lastLoginAt) : '尚未登入' }}</td>
                                             <td>
-                                                <span :class="member.status === 1 ? 'badge bg-success' : 'badge bg-danger'">
+                                                <span class="badge" :class="member.status === 1 ? 'bg-success' : 'bg-danger'">
                                                     {{ member.status === 1 ? '啟用' : '停用' }}
                                                 </span>
                                             </td>
+                                            <td>{{ formatDate(member.created_at) }}</td>
                                             <td>
-                                                <div class="btn-group">
-                                                    <button class="btn btn-sm btn-outline-info" @click="viewMemberDetails(member)">
+                                                <div class="btn-group btn-group-sm">
+                                                    <button class="btn btn-outline-primary" @click="viewMemberDetails(member)" title="查看詳情">
                                                         <i class="fas fa-eye"></i>
                                                     </button>
-                                                    <button class="btn btn-sm btn-outline-primary" @click="editMember(member)">
+                                                    <button class="btn btn-outline-success" @click="adjustMemberBalance(member)" title="調整餘額">
+                                                        <i class="fas fa-money-bill-wave"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-warning" @click="editMember(member)" title="編輯">
                                                         <i class="fas fa-edit"></i>
                                                     </button>
-                                                    <button class="btn btn-sm btn-outline-danger" @click="toggleMemberStatus(member)">
-                                                        <i :class="member.status === 1 ? 'fas fa-ban' : 'fas fa-check'"></i>
+                                                    <button class="btn btn-outline-danger" @click="toggleMemberStatus(member)" title="停用/啟用">
+                                                        <i class="fas" :class="member.status === 1 ? 'fa-ban' : 'fa-check'"></i>
                                                     </button>
                                                 </div>
                                             </td>
@@ -505,6 +507,53 @@
                                             <button type="submit" class="btn btn-primary" :disabled="loading">
                                                 <span v-if="loading" class="spinner-border spinner-border-sm" role="status"></span>
                                                 建立
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 會員餘額調整模態框 -->
+                    <div class="modal" id="adjustBalanceModal" tabindex="-1" v-if="showAdjustBalanceModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">調整會員餘額</h5>
+                                    <button type="button" class="btn-close" @click="hideAdjustBalanceModal"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form @submit.prevent="submitBalanceAdjustment">
+                                        <div class="mb-3">
+                                            <label class="form-label">會員名稱</label>
+                                            <input type="text" class="form-control" v-model="balanceAdjustData.username" readonly>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">目前餘額</label>
+                                            <input type="text" class="form-control" :value="formatMoney(balanceAdjustData.currentBalance)" readonly>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">調整方式</label>
+                                            <select class="form-select" v-model="balanceAdjustData.adjustType">
+                                                <option value="increment">增加金額</option>
+                                                <option value="decrement">減少金額</option>
+                                                <option value="set">設置為指定金額</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">{{ balanceAdjustData.adjustType === 'set' ? '新餘額' : '調整金額' }}</label>
+                                            <input type="number" class="form-control" v-model="balanceAdjustData.amount" min="0" step="0.01" required>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label">備註</label>
+                                            <textarea class="form-control" v-model="balanceAdjustData.comment" placeholder="請輸入調整原因"></textarea>
+                                        </div>
+                                        <div class="d-flex justify-content-end">
+                                            <button type="button" class="btn btn-secondary me-2" @click="hideAdjustBalanceModal">取消</button>
+                                            <button type="submit" class="btn btn-primary" :disabled="loading">
+                                                <span v-if="loading" class="spinner-border spinner-border-sm me-1"></span>
+                                                確認調整
                                             </button>
                                         </div>
                                     </form>
