--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -169,6 +169,23 @@
                                     </ul>
                                 </div>
                             </div>
+                            
+                            <!-- API連接測試卡片 -->
+                            <div class="card mt-3">
+                                <div class="card-header bg-info text-white">
+                                    系統狀態
+                                </div>
+                                <div class="card-body">
+                                    <div class="d-grid">
+                                        <button class="btn btn-primary" @click="checkApiStatus">
+                                            <i class="fas fa-sync-alt me-1"></i>測試API連接
+                                        </button>
+                                        <div class="mt-2 text-muted small">
+                                            <strong>當前API地址:</strong> {{ API_BASE_URL }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
