--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
+    <style>
+        /* 基本樣式 */
+        body {
+            font-family: 'Microsoft JhengHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+        /* ... 其他現有樣式 ... */
+
+        /* 添加球號顏色規則 */
+        .number-ball {
+            width: 28px; /* 根據需要調整大小 */
+            height: 28px;
+            border-radius: 50%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            font-size: 14px; /* 根據需要調整大小 */
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+            margin: 0 2px; /* 添加一些間距 */
+            color: #fff; /* 預設文字顏色 */
+        }
+
+        /* 與遊戲前端一致的顏色 */
+        .color-1 { background-color: #ffcc00; color: #000; } /* 金黃色 */
+        .color-2 { background-color: #3399ff; color: #fff; } /* 鮮藍色 */
+        .color-3 { background-color: #777777; color: #fff; } /* 深灰色 */
+        .color-4 { background-color: #ff9933; color: #fff; } /* 橙色 */
+        .color-5 { background-color: #00ccff; color: #fff; } /* 天藍色 */
+        .color-6 { background-color: #9966cc; color: #fff; } /* 紫色 */
+        .color-7 { background-color: #aaaaaa; color: #fff; } /* 灰色 */
+        .color-8 { background-color: #ff3333; color: #fff; } /* 紅色 */
+        .color-9 { background-color: #990000; color: #fff; } /* 深紅色 */
+        .color-10 { background-color: #33cc33; color: #fff; } /* 綠色 */
+    </style>
 </head>
 <body>
     <div id="app">
@@ -748,14 +783,14 @@
                                             <td>{{ record.period }}</td>
                                             <td>
                                                 <div class="d-flex">
-                                                    <span v-for="(num, index) in record.result || []" :key="index" 
-                                                          class="number-ball mx-1" 
-                                                          :class="{'bg-danger text-white': index === 0, 'bg-primary text-white': index === 9}">
+                                                    <span v-for="(num, index) in record.result || []" :key="index"
+                                                          class="number-ball mx-1"
+                                                          :class="\'color-\' + num">
                                                         {{ num || '-' }}
                                                     </span>
                                                 </div>
                                             </td>
-                                            <td>{{ record.time ? formatDate(record.time) : 'N/A' }}</td>
+                                            <td>{{ record.draw_time ? formatDate(record.draw_time) : 'N/A' }}</td>
                                             <td v-if="record && record.result && record.result.length >= 2">
                                                 <div>冠: {{ record.result[0] > 5 ? '大' : '小' }} {{ record.result[0] % 2 === 0 ? '雙' : '單' }}</div>
                                                 <div>亞: {{ record.result[1] > 5 ? '大' : '小' }} {{ record.result[1] % 2 === 0 ? '雙' : '單' }}</div>
