修復: 修正代理管理平台開獎歷史中的球號顏色顯示問題

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -785,7 +785,7 @@
                                                 <div class="d-flex">
                                                     <span v-for="(num, index) in record.result || []" :key="index"
                                                           class="number-ball mx-1"
-                                                          :class="\'color-\' + num">
+                                                          :class="'color-' + num">
                                                         {{ num || '-' }}
                                                     </span>
                                                 </div>
