代理系統更新：增加總代理ti2025與支持15層代理結構

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -247,6 +247,19 @@
                                         <option value="0">總代理</option>
                                         <option value="1">一級代理</option>
                                         <option value="2">二級代理</option>
+                                        <option value="3">三級代理</option>
+                                        <option value="4">四級代理</option>
+                                        <option value="5">五級代理</option>
+                                        <option value="6">六級代理</option>
+                                        <option value="7">七級代理</option>
+                                        <option value="8">八級代理</option>
+                                        <option value="9">九級代理</option>
+                                        <option value="10">十級代理</option>
+                                        <option value="11">十一級代理</option>
+                                        <option value="12">十二級代理</option>
+                                        <option value="13">十三級代理</option>
+                                        <option value="14">十四級代理</option>
+                                        <option value="15">十五級代理</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
@@ -357,6 +370,19 @@
                                                 <option value="0">總代理</option>
                                                 <option value="1">一級代理</option>
                                                 <option value="2">二級代理</option>
+                                                <option value="3">三級代理</option>
+                                                <option value="4">四級代理</option>
+                                                <option value="5">五級代理</option>
+                                                <option value="6">六級代理</option>
+                                                <option value="7">七級代理</option>
+                                                <option value="8">八級代理</option>
+                                                <option value="9">九級代理</option>
+                                                <option value="10">十級代理</option>
+                                                <option value="11">十一級代理</option>
+                                                <option value="12">十二級代理</option>
+                                                <option value="13">十三級代理</option>
+                                                <option value="14">十四級代理</option>
+                                                <option value="15">十五級代理</option>
                                             </select>
                                         </div>
                                         <div class="mb-3">
