--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -366,34 +366,14 @@
                                         </div>
                                         <div class="mb-3">
                                             <label class="form-label">代理級別</label>
-                                            <select class="form-select" v-model="newAgent.level" required>
-                                                <option value="0">總代理</option>
-                                                <option value="1">一級代理</option>
-                                                <option value="2">二級代理</option>
-                                                <option value="3">三級代理</option>
-                                                <option value="4">四級代理</option>
-                                                <option value="5">五級代理</option>
-                                                <option value="6">六級代理</option>
-                                                <option value="7">七級代理</option>
-                                                <option value="8">八級代理</option>
-                                                <option value="9">九級代理</option>
-                                                <option value="10">十級代理</option>
-                                                <option value="11">十一級代理</option>
-                                                <option value="12">十二級代理</option>
-                                                <option value="13">十三級代理</option>
-                                                <option value="14">十四級代理</option>
-                                                <option value="15">十五級代理</option>
-                                            </select>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label">上級代理</label>
-                                            <select class="form-select" v-model="newAgent.parent">
-                                                <option value="">無</option>
-                                                <option v-for="agent in parentAgents" :key="agent.id" :value="agent.id">
-                                                    {{ agent.username }} ({{ agent.id }})
+                                            <select class="form-select" v-model="newAgent.level" required disabled>
+                                                <option v-for="i in 16" :key="i-1" :value="(i-1).toString()" v-if="i-1 === user.level + 1">
+                                                    {{ getLevelName(i-1) }}
                                                 </option>
                                             </select>
+                                            <small class="form-text text-muted">您只能創建比自己高一級的代理</small>
                                         </div>
+                                        <input type="hidden" v-model="newAgent.parent">
                                         <div class="mb-3">
                                             <label class="form-label">佣金比例</label>
                                             <div class="input-group">
