--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -314,20 +314,16 @@
                                             </td>
                                             <td>
                                                 <div class="btn-group">
-                                                    <button class="btn btn-sm btn-outline-info" @click="viewAgentDetails(agent)">
-                                                        <i class="fas fa-eye"></i>
+                                                    <button class="btn btn-sm btn-outline-primary" @click="adjustAgentBalance(agent)">
+                                                        <i class="fas fa-exchange-alt me-1"></i>點數轉移
                                                     </button>
-                                                    <button class="btn btn-sm btn-outline-primary" @click="editAgent(agent)">
-                                                        <i class="fas fa-edit"></i>
-                                                    </button>
-                                                    <button class="btn btn-sm btn-outline-danger" @click="toggleAgentStatus(agent)">
-                                                        <i :class="agent.status === 1 ? 'fas fa-ban' : 'fas fa-check'"></i>
-                                                    </button>
-                                                    <button class="btn btn-sm btn-outline-warning" @click="adjustAgentBalance(agent)">
-                                                        <i class="fas fa-coins"></i>
+                                                    <button class="btn btn-sm" :class="agent.status === 1 ? 'btn-outline-danger' : 'btn-outline-success'" 
+                                                            @click="toggleAgentStatus(agent)">
+                                                        <i class="fas" :class="agent.status === 1 ? 'fa-ban' : 'fa-check'"></i>
+                                                        {{ agent.status === 1 ? '停用' : '啟用' }}
                                                     </button>
                                                     <button class="btn btn-sm btn-outline-danger" @click="deleteAgent(agent.id, agent.username)">
-                                                        <i class="fas fa-trash-alt"></i>
+                                                        <i class="fas fa-trash-alt me-1"></i>刪除
                                                     </button>
                                                 </div>
                                             </td>
