--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1064,7 +1064,7 @@
     </div>
 
     <!-- 代理額度修改模態框 -->
-    <div class="modal fade" id="adjustAgentBalanceModal" tabindex="-1">
+    <div class="modal" id="adjustAgentBalanceModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1143,7 +1143,5 @@
     
     <!-- 載入主要 JS 檔案 -->
     <script src="./js/main.js"></script>
-</body>
-</html>
 </body>
 </html>
