--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1064,12 +1064,12 @@
     </div>
 
     <!-- 代理額度修改模態框 -->
-    <div class="modal" id="adjustAgentBalanceModal" tabindex="-1">
+    <div class="modal fade" id="adjustAgentBalanceModal" tabindex="-1" aria-labelledby="adjustAgentBalanceModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">點數轉移 - {{ agentBalanceData.agentUsername }}</h5>
-                    <button type="button" class="btn-close" @click="hideAdjustAgentBalanceModal"></button>
+                    <h5 class="modal-title" id="adjustAgentBalanceModalLabel">點數轉移 - {{ agentBalanceData.agentUsername }}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form @submit.prevent="submitAgentBalanceAdjustment">
@@ -1126,7 +1126,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" @click="hideAdjustAgentBalanceModal">取消</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
                     <button type="button" class="btn btn-primary" @click="submitAgentBalanceAdjustment" :disabled="!isValidAgentTransfer">
                         <i class="fas fa-check me-1"></i>確認轉移
                     </button>
