--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2016,20 +2016,8 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="js/main.js"></script>
     <script>
-        // 等待所有腳本加載完成
-        window.addEventListener('load', function() {
-            console.log('所有腳本加載完成，Vue是否可用:', typeof Vue);
-            if (typeof Vue !== 'undefined') {
-                // 加載我們的主腳本
-                const script = document.createElement('script');
-                script.src = 'js/main.js';
-                document.body.appendChild(script);
-            } else {
-                console.error('Vue未加載成功！');
-                alert('Vue未加載成功！請檢查網絡連接。');
-            }
-        });
         async function updateProfile() {
             console.log('開始更新個人資料...');
             this.profileLoading = true;
