--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -2016,7 +2016,26 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <script src="js/main.js"></script>
+    <script>
+        // 延遲載入主腳本，確保 Vue 已完全載入
+        window.addEventListener('load', function() {
+            console.log('頁面完全載入，Vue可用性:', typeof Vue);
+            if (typeof Vue !== 'undefined') {
+                const script = document.createElement('script');
+                                 script.src = 'js/main.js';
+                script.onload = function() {
+                    console.log('main.js 載入完成');
+                };
+                script.onerror = function() {
+                    console.error('main.js 載入失敗');
+                };
+                document.body.appendChild(script);
+            } else {
+                console.error('Vue 未正確載入');
+                alert('系統載入失敗，請重新整理頁面');
+            }
+        });
+    </script>
     <script>
         async function updateProfile() {
             console.log('開始更新個人資料...');
