優化系統權限控制 - 只有總代理可使用客服功能和管理公告，一般代理僅能查看公告

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -118,7 +118,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" :class="{active: activeTab === 'notices'}" href="#" @click="activeTab = 'notices'">系統公告</a>
                             </li>
-                            <li class="nav-item" v-if="isCustomerService">
+                            <li class="nav-item" v-if="user.level === 0">
                                 <a class="nav-link" :class="{active: activeTab === 'customer-service'}" href="#" @click="activeTab = 'customer-service'">客服功能</a>
                             </li>
                         </ul>
@@ -1303,13 +1303,13 @@
                 <div v-if="activeTab === 'notices'">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h2>系統公告</h2>
-                        <button v-if="isCustomerService" class="btn btn-success" @click="showNoticeForm = !showNoticeForm">
+                        <button v-if="user.level === 0" class="btn btn-success" @click="showNoticeForm = !showNoticeForm">
                             <i class="fas fa-plus me-1"></i>{{ showNoticeForm ? '取消新增' : '新增公告' }}
                         </button>
                     </div>
                     
                     <!-- 新增/編輯公告表單 -->
-                    <div v-if="showNoticeForm" class="card mb-4">
+                    <div v-if="showNoticeForm && user.level === 0" class="card mb-4">
                         <div class="card-header">
                             <h5 class="mb-0">
                                 <i class="fas fa-bullhorn me-2"></i>{{ editingNoticeId ? '編輯公告' : '新增公告' }}
@@ -1433,7 +1433,7 @@
                                                     {{ formatDate(notice.created_at) }}
                                                 </small>
                                             </div>
-                                            <div v-if="isCustomerService" class="btn-group">
+                                            <div v-if="user.level === 0" class="btn-group">
                                                 <button class="btn btn-sm btn-outline-primary" @click="startEditNotice(notice)">
                                                     <i class="fas fa-edit me-1"></i>編輯
                                                 </button>
@@ -1450,15 +1450,12 @@
                 </div>
 
                 <!-- 客服功能 -->
-                <div v-if="activeTab === 'customer-service' && isCustomerService">
+                <div v-if="activeTab === 'customer-service' && user.level === 0">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h2>客服功能</h2>
                         <div class="btn-group">
                             <button class="btn btn-primary" @click="showCSOperationModalFunc">
                                 <i class="fas fa-exchange-alt me-1"></i>新增轉帳
-                            </button>
-                            <button class="btn btn-success" @click="showNoticeForm = !showNoticeForm">
-                                <i class="fas fa-bullhorn me-1"></i>{{ showNoticeForm ? '取消新增' : '新增公告' }}
                             </button>
                         </div>
                     </div>
