--- a/deploy/frontend/login.html
+++ b/deploy/frontend/login.html
@@ -213,7 +213,7 @@
             console.log('開始登入請求...'); // 添加日誌
 
             // 發送登入請求到後端
-            fetch('/api/login', {
+            fetch('http://localhost:3002/api/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
