--- a/deploy/frontend/login.html
+++ b/deploy/frontend/login.html
@@ -213,7 +213,9 @@
             console.log('開始登入請求...'); // 添加日誌
 
             // 發送登入請求到後端
-            fetch('http://localhost:3002/api/login', {
+            const apiBase = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' 
+                ? 'http://localhost:3002' : '';
+            fetch(`${apiBase}/api/login`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
