🔧 修復iPhone 14顯示問題：添加.results-grid支援並優化內嵌樣式

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -91,11 +91,11 @@
         .current-result {
             display: flex !important;
             flex-direction: row !important;
-            justify-content: space-evenly !important; /* 改為均勻分佈 */
+            justify-content: space-between !important;
             flex-wrap: nowrap !important;
-            overflow-x: auto !important;
+            overflow-x: visible !important;
             width: 100%;
-            padding: 10px;
+            padding: 5px 8px;
         }
         
         /* 歷史記錄 */
