🔧 修復XR和S20 Ultra顯示問題：擴展斷點範圍394-420px並強化CSS優先級

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -88,14 +88,14 @@
         }
         
         /* 確保開獎結果水平排列 */
-        .current-result {
+        .current-result, .results-grid, .race-result {
             display: flex !important;
             flex-direction: row !important;
             justify-content: space-between !important;
             flex-wrap: nowrap !important;
             overflow-x: visible !important;
-            width: 100%;
-            padding: 5px 8px;
+            width: 100% !important;
+            padding: 5px 8px !important;
         }
         
         /* 歷史記錄 */
