🔒 添加最高優先級CSS保護層 - 防止任何外部樣式覆蓋
- 使用html body div層級選擇器提高CSS優先級
- 確保.results-grid的Grid設定絕對不會被覆蓋
- 添加最強的保護機制，即使有第三方CSS也無法干擾
- 徹底保證430px螢幕顯示完整10顆球

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,6 +87,19 @@
             );
         }
         
+        /* 🔒 最高優先級保護 - 防止任何CSS覆蓋我們的Grid設定 */
+        html .results-grid,
+        html body .results-grid,
+        html body div .results-grid,
+        html body div div .results-grid {
+            display: grid !important;
+            grid-template-columns: repeat(10, minmax(28px, 1fr)) !important;
+            min-width: 0 !important;
+            width: 100% !important;
+            max-width: 100% !important;
+            overflow: visible !important;
+        }
+
         /* 確保開獎結果水平排列 */
         .current-result, .race-result {
             display: flex !important;
