--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>極速賽車 - 生產版</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="./src/styles/main.css?v=1.5">
+    <!-- <link rel="stylesheet" href="./src/styles/main.css?v=1.5"> 已移除，避免Vuetify衝突 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- 先引入 Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
