移除main.js文件和登入界面 - 避免不需要的登入頁面出現

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -4986,6 +4986,6 @@
         });
     </script>
     <!-- 最後引入主要腳本 -->
-    <script src="./src/scripts/main.js"></script>
+    <!-- <script src="./src/scripts/main.js"></script> 已移除，避免登入界面出現 -->
 </body>
 </html>
