--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4986,6 +4986,6 @@
         });
     </script>
     <!-- 最後引入主要腳本 -->
-    <script src="./src/scripts/main.js"></script>
+    <!-- <script src="./src/scripts/main.js"></script> 已移除，避免登入界面出現 -->
 </body>
 </html>
